test/visibility/private/uses/accessMulti2.good
accessMulti2.chpl:3: error: unresolved call 'd()'
accessMulti2.chpl:3: note: because no functions named d found in scope
